--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Xjdkfhjsdv</h1>
+    <h1>Заголовок</h1>
+    <p>Старі фотографії</p>
   </body>
 </html>
