--- a/index.html
+++ b/index.html
@@ -1,6 +1,141 @@
-<html>
-    <body>
-        <h1>Vlad my page1</h1>
-        <h2>My changes</h2>
-    </body>
+<!DOCTYPE html>
+<html lang="ua">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Веб-студія</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="/">
+          <img src="./images/WebStudio.svg" alt="логотип веб-студії" />
+        </a>
+
+        <ul>
+          <li><a href="">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
+        </ul>
+      </nav>
+
+      <ul>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+      </ul>
+    </header>
+
+    <main>
+      <section>
+        <h1>
+          Ефективні рішення для <br />
+          вашого бізнесу
+        </h1>
+        <a href="">Замовити послугу</a>
+      </section>
+
+      <section>
+        <ul>
+          <li>
+            <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+
+          <li>
+            <h2>ПУНКТУАЛЬНІСТЬ</h2>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
+
+          <li>
+            <h2>ПЛАНУВАННЯ</h2>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+
+          <li>
+            <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li>
+            <img src="./images/box 1.jpg" alt="картинка" width="370" />
+          </li>
+          <li>
+            <img src="./images/box 2.jpg" alt="картинка" width="370" />
+          </li>
+          <li>
+            <img src="./images/box 3.jpg" alt="картинка" width="370" />
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/img (1).jpg"
+              alt="зображення співробітника"
+              width="270"
+            />
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/img (2).jpg"
+              alt="зображення співробітника"
+              width="270"
+            />
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/img (3).jpg"
+              alt="зображення співробітника"
+              width="270"
+            />
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/img (4).jpg"
+              alt="зображення співробітника"
+              width="270"
+            />
+            <h3>Михайло Єрмаков</h3>
+            <p>Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="/">
+        <img src="./images/WebStudio.svg" alt="Логотип веб-студії" />
+      </a>
+      <address>м. Київ, пр-т Лесі Українки, 26</address>
+      <adress>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+      </adress>
+    </footer>
+  </body>
 </html>
