--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,9 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="/">
-          <img src="./images/WebStudio.svg" alt="логотип веб-студії" />
-        </a>
+        <a href="">WebStudio</a>
 
         <ul>
           <li><a href="">Студія</a></li>
@@ -21,8 +19,8 @@
       </nav>
 
       <ul>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
@@ -32,13 +30,13 @@
           Ефективні рішення для <br />
           вашого бізнесу
         </h1>
-        <a href="">Замовити послугу</a>
+        <button type="button">Замовити послугу</button>
       </section>
 
       <section>
         <ul>
           <li>
-            <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
@@ -46,7 +44,7 @@
           </li>
 
           <li>
-            <h2>ПУНКТУАЛЬНІСТЬ</h2>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
@@ -74,13 +72,13 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img src="./images/box 1.jpg" alt="картинка" width="370" />
+            <img src="./images/box1.jpg" alt="картинка" width="370" />
           </li>
           <li>
-            <img src="./images/box 2.jpg" alt="картинка" width="370" />
+            <img src="./images/box2.jpg" alt="картинка" width="370" />
           </li>
           <li>
-            <img src="./images/box 3.jpg" alt="картинка" width="370" />
+            <img src="./images/box3.jpg" alt="картинка" width="370" />
           </li>
         </ul>
       </section>
@@ -90,7 +88,7 @@
         <ul>
           <li>
             <img
-              src="./images/img (1).jpg"
+              src="./images/img(1).jpg"
               alt="зображення співробітника"
               width="270"
             />
@@ -99,7 +97,7 @@
           </li>
           <li>
             <img
-              src="./images/img (2).jpg"
+              src="./images/img(2).jpg"
               alt="зображення співробітника"
               width="270"
             />
@@ -108,7 +106,7 @@
           </li>
           <li>
             <img
-              src="./images/img (3).jpg"
+              src="./images/img(3).jpg"
               alt="зображення співробітника"
               width="270"
             />
@@ -117,7 +115,7 @@
           </li>
           <li>
             <img
-              src="./images/img (4).jpg"
+              src="./images/img(4).jpg"
               alt="зображення співробітника"
               width="270"
             />
@@ -128,13 +126,13 @@
       </section>
     </main>
     <footer>
-      <a href="/">
-        <img src="./images/WebStudio.svg" alt="Логотип веб-студії" />
-      </a>
-      <address>м. Київ, пр-т Лесі Українки, 26</address>
+      <a href="">WebStudio</a>
+      <address><p>м. Київ, пр-т Лесі Українки,26</p></address>
       <adress>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        </ul>
       </adress>
     </footer>
   </body>
