--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img src="./images/box1.jpg" alt="картинка" width="370" />
+            <img src="/images/box1.jpg" alt="картинка" width="370" />
           </li>
           <li>
             <img src="./images/box2.jpg" alt="картинка" width="370" />
