--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
           </li>
 
           <li>
-            <h2>ПЛАНУВАННЯ</h2>
+            <h3>ПЛАНУВАННЯ</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
 
           <li>
-            <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
@@ -72,7 +72,7 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img src="/images/box1.jpg" alt="картинка" width="370" />
+            <img src="./images/box1.jpg" alt="картинка" width="370" />
           </li>
           <li>
             <img src="./images/box2.jpg" alt="картинка" width="370" />
@@ -127,13 +127,14 @@
     </main>
     <footer>
       <a href="">WebStudio</a>
-      <address><p>м. Київ, пр-т Лесі Українки,26</p></address>
-      <adress>
+      <address>
+        <p>м.Київ,пр-т Лесі Українки,26</p>
+
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
         </ul>
-      </adress>
+      </address>
     </footer>
   </body>
 </html>
